src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: black;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

:root {
  --button-width: 80px;
  --button-height: calc(0.8 * var(--button-width));
  --display-height: calc(0.8 * var(--button-width));
  --black: black;
  --dark-grey: #666;
  --mid-grey: #aaa;
  --light-grey: #ccc;
  --white: WhiteSmoke;
  --accent: orange;
}

.calculator {
  width: calc(var(--button-width) * 4);
  margin: 24px auto;
  background-color: var(--black);
}

.display {
  font-size: 52px;
  height: var(--display-height);
  line-height: var(--display-height);
  text-align: right;
  background-color: var(--dark-grey);
  color: var(--white);
}

.value {
  margin-right: 12px;
}

.button {
  height: var(--button-height);
  width: var(--button-width);
  font-size: 40px;
  background-color: var(--mid-grey);
  color: var(--white);
  padding: 0;
  border: 1px solid var(--black);
}

.width-2 {
  width: calc(2 * var(--button-width));
}

.equals {
  background-color: var(--accent);
}

